testCases/parserTestCases/correct/factor.cs16
-- Carston Schilds, Feb 21st 2016

void main(void){
    x1 := not b;
    x2 := (y);
    x3 := 7;
    x4 := false;
    x5 := true;

    x6 := not foo();
    x7 := (foo());

    x8 := not not not not not not not not not not y;
    x9 := not( not (not (not (not (not (not (not (not (not y)))))))));
}