testCases/parserTestCases/error/idFactor.cs16
-- Carston Schilds, Feb 21st 2016

void main(void){

    --omitting id
    x := ;
    x := [1];
    x := ();
}